# WhoopRadioDesktop

./: README.md
.github/workflows/: main.yml
src/: index.html  template-album-header.html  template-album-icon.html  template-track.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: controls.css  edit.css  style.css
src/js/: album.js  async-queue.js  component.js  controls.js  database.js  default.js  edit.js  event-target.js  local.js  main.js  player.js  queue.js  tauri.js  track.js  youtube.js
